clang/test/BSC/Coroutine/Other/invalid-await-expression.cbs
// RUN: %clang_cc1 -verify %s 

#include "../async-func-read-opposite.hbs"

struct __FatPointer_int f() { // expected-error {{await expression is not allowed to appear in non-async function.}}    
    struct __FatPointer_int f;
    int a = await read(1);
    return f;
}

int main() {
  return 0;
}